fix footer bullet alignment

--- a/app/assets/stylesheets/layout/_footer.css.scss
+++ b/app/assets/stylesheets/layout/_footer.css.scss
@@ -16,7 +16,7 @@ footer {
       @extend .font-banda-bold;
       text-decoration: none;
       font-size: 14px;
-      background: image-url("layout/footer-bullet.png") right 5px no-repeat;
+      background: image-url("layout/footer-bullet.png") right 8px no-repeat;
       text-shadow: 0 1px 0 rgba(255,255,255,.8);
       &:hover {
         color: $link_hover;
